data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2129.wast
;; 10. **Faulty Control Flow with `br_if`**:    - **Test Description**: Create a loop where a `br_if` inside a nested block is mishandled, either by incorrect evaluation or misdirected control flow, leading to an infinite loop.    - **Constraint**: Ensuring `br_if` instructions are authenticated correctly according to nested blocks.    - **Relation to Infinite Loops**: Faulty control flow in evaluating `br_if` can keep looping indefinitely.

(assert_invalid
  (module (func $faulty-br_if-control-flow
    (block
      (loop (br_if 0 (i32.const 1)))
      (i32.const 0)
    )
  ))
  "type mismatch"
)